# bootstrap-email

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
bootstrap_email/: base.html  bootstrap-head.scss  compiler.py  django.py
bootstrap_email/scss/: _helpers.scss  _reboot_email.scss  _reboot_head.scss  _variables.scss
bootstrap_email/scss/components/: _alert.scss  _badge.scss  _button.scss  _card.scss  _container.scss  _grid.scss  _hr.scss  _image.scss  _preview.scss  _stack.scss  _table.scss
bootstrap_email/scss/helpers/: _functions.scss  _mixins.scss  _selectors_for_utils.scss
bootstrap_email/scss/utilities/: _background.scss  _border-radius.scss  _border.scss  _color.scss  _display.scss  _sizing.scss  _spacing.scss  _typography.scss  _valign.scss
bootstrap_email/scss/variables/: _body.scss  _borders.scss  _buttons.scss  _colors.scss  _tables.scss  _typography.scss  _utilities.scss
bootstrap_email/templates/: body.html  container.html  div.html  table-left.html  table-to-tbody.html  table-to-tr.html  table.html  td.html  tr.html
tests/: output-receipt.html  test.py
tests/input/compile-html/: align.html  body.html  container-fluid.html  container.html
tests/input/configure-html/: missing-meta-tags.html
tests/input/end-to-end/: receipt.html
tests/input/integration/: alert.html  badge.html  block.html  button.html  card.html  grid.html  padding.html  preview.html  spacing-2.html  spacing.html  stack.html  table.html
tests/input/utilities/: background.html  color.html  spacing.html  typography.html
tests/output/compile-html/: align.html  body.html  button.html  container.html  grid.html  preview.html  stack.html
tests/output/configure-html/: missing-meta-tags.html
tests/output/end-to-end/: receipt.html
(+10 files in other folders)
